--- a/config/database.yml
+++ b/config/database.yml
@@ -18,7 +18,9 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  adapter: postresql
+  encording: unicode
+  pool: 5
 
 production:
   <<: *default
